# NachhaltigkeitsKarteBackend

./: db.json  main.py  pyproject.toml  requirements.txt
